Work with vignette

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -26,3 +26,12 @@ year = "2012"
  year = {2015}
 }
 
+
+@book{carroll2006,
+	Author = {Raymond J. Carroll and David Ruppert and Leonard A. Stefanski and Ciprian M. Crainiceanu},
+	Publisher = {Chapman \& Hall/CRC},
+	Title = {Measurement Error in Nonlinear Models: A Modern Perspective, Second Edition},
+	address = {Boca Raton, FL, USA},
+	Year = {2006}
+	}
+
