Further work on vignette. Writing about lasso

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -35,3 +35,71 @@ year = "2012"
 	Year = {2006}
 	}
 
+
+
+@book{hastie2009,
+  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  edition = 2,
+  file = {:Books\\HastieTibshiraniFriedman-09-Elements-of-Statistical-Learning-2nd-edition\\hastie_09_elements-of.statistical-learning.pdf:PDF},
+  keywords = {inference mathmatics dataanalysis method clutering statistics},
+  publisher = {Springer},
+  timestamp = {2010-06-03T15:15:09.000+0200},
+  title = {The elements of statistical learning: data mining, inference and prediction},
+  url = {http://www-stat.stanford.edu/~tibs/ElemStatLearn/},
+  year = 2009
+}
+
+
+
+
+
+@article{tibshirani1996,
+  author = {Tibshirani, R.},
+  groups = {public},
+  issn = {0035-9246},
+  journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  keywords = {},
+  pages = {267--288},
+  publisher = {JSTOR},
+  timestamp = {2012-04-13T20:31:42.000+0200},
+  title = {{Regression shrinkage and selection via the Lasso}},
+  username = {aude.hofleitner},
+  year = 1996
+}
+
+
+@Article{simon2011,
+    title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
+    author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {39},
+    number = {5},
+    pages = {1--13},
+    url = {http://www.jstatsoft.org/v39/i05/},
+  }
+
+
+@book{buhlmann2011,
+  added-at = {2015-10-26T17:46:38.000+0100},
+  author = {B{\"u}hlmann, Peter and van de Geer, Sara},
+  biburl = {https://www.bibsonomy.org/bibtex/2e297610dfd246f9d5e1f71f384a5a16d/for916},
+  doi = {10.1007/978-3-642-20192-9},
+  interhash = {58ab4a66f0f1996de8d2580b55daa693},
+  intrahash = {e297610dfd246f9d5e1f71f384a5a16d},
+  isbn = {978-3-642-20191-2},
+  keywords = {c1},
+  mrclass = {62-07 (60E15 62G05 62G20 62G30 62H30 62J07)},
+  mrnumber = {2807761 (2012e:62006)},
+  mrreviewer = {Pierre Alquier},
+  note = {Methods, theory and applications},
+  pages = {xviii+556},
+  publisher = {Springer, Heidelberg},
+  series = {Springer Series in Statistics},
+  timestamp = {2015-10-26T17:46:38.000+0100},
+  title = {Statistics for high-dimensional data},
+  url = {http://dx.doi.org/10.1007/978-3-642-20192-9},
+  year = 2011
+}
+
+
