Further worked on the vignette. Modifying functions along the way.

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -103,3 +103,9 @@ year = "2012"
 }
 
 
+@Manual{zeallot_package,
+    title = {zeallot: Multiple, Unpacking, and Destructuring Assignment},
+    author = {Nathan Teetor},
+    note = {R package version 0.1.0},
+    url = {https://github.com/nteetor/zeallot},
+  }
