Wrote a bit more in the vignette, about logistic regression

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -109,3 +109,18 @@ year = "2012"
     note = {R package version 0.1.0},
     url = {https://github.com/nteetor/zeallot},
   }
+
+@article{stefanski1987,
+ ISSN = {00063444},
+ URL = {http://www.jstor.org/stable/2336464},
+ abstract = {This paper studies estimation in generalized linear models in canonical form when the explanatory vector is measured with independent normal error. For the functional case, i.e. when the explanatory vectors are fixed constants, unbiased score functions are obtained by conditioning on certain sufficient statistics. This work generalizes results obtained by the authors (Stefanski & Carroll, 1985) for logistic regression. In the case that the explanatory vectors are independent and identically distributed with unknown distribution, efficient score functions are identified. Related results for the structural case are given by Bickel & Ritov (1987).},
+ author = {Leonard A. Stefanski and Raymond J. Carroll},
+ journal = {Biometrika},
+ number = {4},
+ pages = {703-716},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Conditional Scores and Optimal Scores for Generalized Linear Measurement- Error Models},
+ volume = {74},
+ year = {1987}
+}
+
