Added a little bit about Dantzig selector

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -124,3 +124,40 @@ year = "2012"
  year = {1987}
 }
 
+
+@article{candes2007,
+author = "Candes, Emmanuel and Tao, Terence",
+doi = "10.1214/009053606000001523",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "12",
+number = "6",
+pages = "2313--2351",
+publisher = "The Institute of Mathematical Statistics",
+title = "The Dantzig selector: Statistical estimation when p is much larger than n",
+url = "https://doi.org/10.1214/009053606000001523",
+volume = "35",
+year = "2007"
+}
+
+
+@article{james2009,
+author = {James, Gareth M. and Radchenko, Peter},
+title = {A generalized Dantzig selector with shrinkage tuning},
+journal = {Biometrika},
+volume = {96},
+number = {2},
+pages = {323-337},
+year = {2009},
+doi = {10.1093/biomet/asp013},
+URL = { + http://dx.doi.org/10.1093/biomet/asp013},
+eprint = {/oup/backfile/content_public/journal/biomet/96/2/10.1093/biomet/asp013/2/asp013.pdf}
+}
+
+@Manual{flare_package,
+    title = {flare: Family of Lasso Regression},
+    author = {Xingguo Li and Tuo Zhao and Lie Wang and Xiaoming Yuan and Han Liu},
+    year = {2014},
+    note = {R package version 1.5.0},
+    url = {https://CRAN.R-project.org/package=flare},
+  }
