--- a/vignettes/hdme-package.Rmd
+++ b/vignettes/hdme-package.Rmd
@@ -115,7 +115,9 @@ create_example_data <- function(n, p, s = 5, sdX = 1, sdU = 0.5, sdEpsilon = 0.1
 
 We then call the function to get the data. I use the `%<-%` from the `zeallot` package (@zeallot_package) to get all elements of the list directly from the function call. 
 
-```{r}
+```{r, message=FALSE}
+# Need to attach igraph before zeallot, because of a conflict in the %<-% operator
+library(igraph) 
 library(zeallot)
 n <- 100
 p <- 500
@@ -168,6 +170,49 @@ ggplot(estimatesOfNonzero, aes(x = index, y = beta, color = label)) +
 ```
 
 ### The Dantzig Selector
+The Dantzig selector @candes2007 is closely related to the lasso. It is defined as the solution to the optimization problem
+$$
+\text{minimize } ~ \|\beta\|_{1}, ~ \text{ subject to }  ~ (1/n)\| x^{T} (y - X\beta)\|_{\infty} \leq \lambda,
+$$
+where $\|\cdot\|_{\infty}$ denotes the maximum component norm. An `R` implentation of the Dantzig selector can be found in the `flare` package @flare_package. We illustrate it with the same data as in the previous section.
+
+```{r, message=FALSE}
+library(flare)
+n <- 100
+p <- 500
+set.seed(1000)
+c(X, W, y, beta, sigmaUU) %<-% create_example_data(n, p)
+```
+
+Calling the `slim` method in the `flare` package yields the Dantzig selector solution for the default values of $\lambda$. We can compare the methods for data with and without measurement error.
+
+```{r}
+# No measurement error, using X
+dantzig_fit_x <- slim(X, y, nlambda = 10, method = "dantzig", verbose = FALSE, lambda.min.ratio = 0.3)
+# Measurement error, using W
+dantzig_fit_w <- slim(W, y, nlambda = 10, method = "dantzig", verbose = FALSE, lambda.min.ratio = 0.3)
+```
+
+Below is the regularization path for the Dantzig selector in the case of no measurement error.
+```{r}
+plot(dantzig_fit_x)
+```
+
+
+Next is the regularization path for the Dantzig selector in the case of measurement error.
+
+```{r}
+plot(dantzig_fit_w)
+```
+
+A generalized Dantzig selector for generalized linear models was introduced by @james2009. It is defined as the solution to the optimization problem 
+$$
+\text{minimize } ~ \|\beta\|_{1}, ~ \text{ subject to }  ~ (1/n)\| x^{T} (y - \mu(X\beta))\|_{\infty} \leq \lambda,
+$$
+where $\mu(\cdot) \in \mathbb{R}^{n}$ is the vector valued mean function of the generalized linear model. Examples include logistic regression with $\mu(x) = (1+\exp(-x))^{-1}$ and Poisson regression with $\mu(x) = \exp(x)$. Using an iterative reweighing algorithm, the generalized Dantzig selector can be solved as a sequence of linear optimization problems of the same form as the Dantzig selector for linear models.
+
+To our knowledge, no R package to date contains an implementation of the generalized Dantzig selector, although code is available on [Professor Gareth James' homepage](http://www-bcf.usc.edu/~gareth/research/gdscode). 
+
 
 
 # Corrected Lasso
